[gd_scene load_steps=6 format=3 uid="uid://duqwowblg5j1u"]

[ext_resource type="Script" path="res://pause_panel.gd" id="1_dj5kc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_opfjg"]
bg_color = Color(0.0980392, 0.0980392, 0.196078, 0.980392)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j6a4b"]
bg_color = Color(0.0784314, 0.0784314, 0.0980392, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0.0784314, 0.784314)
shadow_size = 1
anti_aliasing_size = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kiefe"]
bg_color = Color(0.0862745, 0.0862745, 0.109804, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0.0784314, 0.784314)
shadow_size = 1
anti_aliasing_size = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0kqkr"]
bg_color = Color(0.0980392, 0.0980392, 0.133333, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 1
anti_aliasing_size = 2.0

[node name="PausePanel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dj5kc")

[node name="CenterControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -196.0
offset_right = 176.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="Panel" parent="CenterControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_opfjg")

[node name="ResumeButton" type="Button" parent="CenterControl/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -120.0
offset_right = 88.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_j6a4b")
theme_override_styles/hover = SubResource("StyleBoxFlat_kiefe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0kqkr")
toggle_mode = true
text = "RESUME"

[node name="RestartButton" type="Button" parent="CenterControl/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -24.0
offset_right = 88.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_j6a4b")
theme_override_styles/hover = SubResource("StyleBoxFlat_kiefe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0kqkr")
toggle_mode = true
text = "RESTART"

[node name="ExitButton" type="Button" parent="CenterControl/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = 72.0
offset_right = 88.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_j6a4b")
theme_override_styles/hover = SubResource("StyleBoxFlat_kiefe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0kqkr")
toggle_mode = true
text = "EXIT"

[connection signal="pressed" from="CenterControl/Menu/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CenterControl/Menu/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="CenterControl/Menu/ExitButton" to="." method="_on_exit_button_pressed"]
